--- a/src/app/components/nuxeo/nuxeo.component.scss
+++ b/src/app/components/nuxeo/nuxeo.component.scss
@@ -23,3 +23,23 @@
 input[type="file"] {
     margin: 20px 0;
 }
+
+.full-view {
+    display: flex;
+    flex-direction: column;
+}
+    
+.full-view .mat-expansion-panel {
+    margin-bottom: 10px;
+}
+
+.full-view .mat-expansion-panel-header {
+    background-color: #f5f5f5;
+}
+
+.full-view .button-group {
+    margin-top: 20px;
+    display: flex;
+    justify-content: flex-end;
+}
+    
